[gd_scene load_steps=8 format=2]

[ext_resource path="res://Attacks/CringeAttack/cringe_attack.gd" type="Script" id=1]
[ext_resource path="res://team_stats/Spamton/Spamton.tscn" type="PackedScene" id=2]
[ext_resource path="res://team_stats/Jevil/Jevil.tscn" type="PackedScene" id=3]
[ext_resource path="res://Attacks/CringeAttack/explosion_area.gd" type="Script" id=6]
[ext_resource path="res://Attacks/CringeAttack/Punch.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 50.4876

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 528.119, 100.289, 10.4305, -202.419, -10.4305, 202.419, 735.139, 309.279, 84.7732, -1.3215, -84.7732, 1.3215, 544, 503.093, 1.28022, 199.714, -1.28022, -199.714, 317.02, 300.616, 0, 0, 0, 0, 528.119, 100.289 )
}

[node name="CringeAttack" type="Node2D"]
script = ExtResource( 1 )
ATTACK_MODE = 2

[node name="Jevil" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 868, 300 )

[node name="Spamton" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 773, 388 )

[node name="JokeSpawn" type="Node2D" parent="."]
position = Vector2( 804, 294 )

[node name="JokeTarget" type="Node2D" parent="."]
position = Vector2( 530, 306 )

[node name="ExplosionArea" type="Area2D" parent="JokeTarget"]
position = Vector2( 0, -6 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="JokeTarget/ExplosionArea"]
position = Vector2( -5, 6 )
shape = SubResource( 1 )

[node name="JokeTarget2" type="Node2D" parent="."]
position = Vector2( 525, 127 )

[node name="ExplosionArea" type="Area2D" parent="JokeTarget2"]
visible = false
position = Vector2( -3, 0 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="JokeTarget2/ExplosionArea"]
visible = false
position = Vector2( 3, 0 )
shape = SubResource( 1 )

[node name="Spiral" type="Path2D" parent="."]
position = Vector2( 6.13593, 24.3846 )
scale = Vector2( 0.980583, 0.923489 )
curve = SubResource( 2 )

[node name="SpiralFollow" type="PathFollow2D" parent="Spiral"]
position = Vector2( 528.119, 100.289 )
rotation = 0.0577568

[node name="PunchPath" parent="." instance=ExtResource( 7 )]
position = Vector2( -33, 61 )

[node name="PathFollow2D" type="PathFollow2D" parent="PunchPath"]
position = Vector2( 187, 196 )
rotation = -0.604699

[node name="PunchPath2" parent="." instance=ExtResource( 7 )]
position = Vector2( 274, 684 )
rotation = -1.57079
scale = Vector2( 0.759513, 1.10861 )

[node name="PathFollow2D" type="PathFollow2D" parent="PunchPath2"]
position = Vector2( 187, 196 )
rotation = -0.604699

[connection signal="area_entered" from="JokeTarget/ExplosionArea" to="JokeTarget/ExplosionArea" method="_on_ExplosionArea_area_entered"]
[connection signal="area_entered" from="JokeTarget2/ExplosionArea" to="JokeTarget2/ExplosionArea" method="_on_ExplosionArea_area_entered"]
